--- a/user/manifest.yaml
+++ b/user/manifest.yaml
@@ -39,8 +39,8 @@ spec:
       - name: user
         image: mohammadmunna1234/user:v1
         envFrom:
-         - configmapRef:
-           name: user
+         - configMapRef:
+            name: user
 ---
 apiVersion: v1
 kind: Service
