--- a/user/manifest.yaml
+++ b/user/manifest.yaml
@@ -8,9 +8,9 @@ metadata:
    project: roboshop
    tier: app
 data: 
-     MONGO="true" 
-     MONGO_URL="mongodb://mongodb:27017/catalogue"
-     REDIS_URL="redis://redis:6379"
+     MONGO: "true" 
+     MONGO_URL: "mongodb://mongodb:27017/catalogue"
+     REDIS_URL: "redis://redis:6379"
 ---
 apiVersion: apps/v1
 kind: Deployment
