--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1 
 kind: Secret 
 metadata: 
- name: mysql
-labels: 
-  labels:
-    component: mysql
-    project: roboshop
-    tier: database
+ name: mysql 
+ namespace: roboshop
+labels:
+  component: mysql
+  project: roboshop
+  tier: database
 type: Opaque
 data:
   MYSQL_ROOT_PASSWORD: "Um9ib1Nob3BAMQ=="
@@ -39,8 +39,8 @@ spec:
       - name: mysql
         image: mohammadmunna1234/mysql:v1
         envFrom:
-        - secretRef:
-          name: mysql
+        - SecretRef:
+           name: mysql
 ---
 apiVersion: v1
 kind: Service
