--- a/shipping/manifest.yaml
+++ b/shipping/manifest.yaml
@@ -1,61 +1,83 @@
-apiVersion: v1 
+
+apiVersion: v1
 kind: ConfigMap
-metadata: 
- name: shipping
- namespace: roboshop
- labels:
-   component: shipping
-   project: roboshop
-   tier: app
-data: 
-  CART_ENDPOINT: "cart:8080" 
-  DB_HOST: "mysql"
+metadata:
+  name: payment
+  namespace: roboshop
+  labels:
+    component: payment
+    project: roboshop
+    tier: app
+data:
+  CART_HOST: "cart"
+  CART_PORT: "8080"
+  USER_HOST: "user"
+  USER_PORT: "8080"
+  AMQP_HOST: "rabbitmq"
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: payment
+  labels:
+    component: payment
+    project: roboshop
+    tier: app
+type: Opaque
+data:
+  AMQP_USER: "cm9ib3Nob3A="
+  AMQP_PASS: "cm9ib3Nob3AxMjM="
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: shipping
+  name: payment
   namespace: roboshop
+  # deployment labels
   labels:
-    component: shipping
+    component: payment
     project: roboshop
     tier: app
 spec:
   replicas: 1
+  # These are the labels replica set use to create pod replicas, this should match pod labels
   selector:
     matchLabels:
-      component: shipping
+      component: payment
       project: roboshop
       tier: app
+  # This is pod definition
   template:
     metadata:
       labels:
-        component: shipping
+        component: payment
         project: roboshop
         tier: app
     spec:
       containers:
-      - name: shipping
-        image: mohammadmunna1234/shipping:v1
+      - name: payment
+        image: joindevops/payment:v1
         envFrom:
-         - configMapRef:
-            name: shipping
+        - configMapRef:
+            name: payment
+        - secretRef:
+            name: payment
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: shipping
+  name: payment
   namespace: roboshop
   labels:
-    component: shipping
+    component: payment
     project: roboshop
     tier: app
 spec:
   selector:
-    component: shipping
+    component: payment
     project: roboshop
     tier: app
   ports:
   - protocol: TCP
-    port: 8080
-    targetPort: 8080
+    port: 8080 # service port
+    targetPort: 8080 # container port
